# ogleague

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
oglib/: CMakeLists.txt
oglib/dep/: CMakeLists.txt  lua.hpp
oglib/dep/plog/: Log.h
oglib/oglib/base/: box3d.hpp  color.hpp  event.hpp  log.hpp  math.hpp  point2d.hpp  point3d.hpp  strings.hpp  types.hpp
oglib/oglib/file/: ini.h  inibin.cpp  initext.cpp
