cmake_minimum_required(VERSION 2.8)
project(ogleague)
if(MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest")
else()
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Wextra")
endif()
add_subdirectory(oglib)
add_executable(ogleague main.cpp)
target_link_libraries(ogleague oglib)
